[build-system]
requires = ["uv_build >= 0.8.14, < 0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Tell the `uv_build` backend that our package lives at the repo root in `nmdc_client/`
# (not under a `src/` directory, which is where the backend would look by default).
# Reference: https://docs.astral.sh/uv/concepts/build-backend/#modules
module-name = "nmdc_client"
module-root = ""

[project]
name = "nmdc-client"
# Version is managed by GitHub releases and synced to PyPI - so this is just a placeholder that gets replaced during the release process.
version = "0.0.0"
description = "Python client library for the NMDC API (formerly nmdc-api-utilities)"
authors = [
    { name = "Olivia Hess", email = "olivia.hess@pnnl.gov" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["LICENSE"]
dependencies = [
    # We use `requests` to call the NMDC HTTP APIs.
    # Docs: https://requests.readthedocs.io/en/latest/
    "requests >= 2.33.1, < 3",
    # We use `dotenv` to load credentials from a local `.env` file.
    # Docs: https://pypi.org/project/dotenv/
    "dotenv >= 0.9.9, < 1",
    # We use `deprecated` to communicate deprecation to users.
    # Docs: https://pypi.org/project/Deprecated/
    "deprecated >= 1.3.1",
]

[dependency-groups]
dev = [
    # We use `pre-commit` to run formatting and lint hooks before committing.
    # Docs: https://pre-commit.com/
    "pre-commit >= 4.5.1, < 5",
    # We use `pytest` to run tests.
    # Usage: $ uv run pytest
    # Docs: https://docs.pytest.org/en/stable/contents.html
    "pytest >= 9.0.3, < 10",
    # We use `mypy` to perform static type checking.
    # Usage: $ uv run mypy
    # Docs: https://mypy.readthedocs.io/en/stable/
    "mypy >= 1.20.2, < 2",
    # We use `types-requests` to get type information about the `requests` package.
    # PyPI: https://pypi.org/project/types-requests/
    "types-requests >= 2.33.0",
    # We use `pandas-stubs` to get type information about the `pandas` package.
    # PyPI: https://pypi.org/project/pandas-stubs/
    "pandas-stubs >= 2.2",
    # We use `types-deprecated` to get type information about the `deprecated` package.
    # PyPI: https://pypi.org/project/types-Deprecated/
    "types-deprecated >= 1.3.1.20260508",
]
docs = [
    # We use `pandas` in notebooks rendered in the docs to show tabular examples.
    # Docs: https://pandas.pydata.org/docs/
    "pandas >= 2.2, < 4",
    # We use `mkdocs-material` (Material for MkDocs) to generate the user documentation,
    # matching the styling of https://docs.microbiomedata.org/.
    # Docs: https://squidfunk.github.io/mkdocs-material/
    "mkdocs-material >= 9.6, < 10",
    # We use `mkdocstrings` (with its Python handler) to generate API reference pages
    # from docstrings and type hints.
    # Docs: https://mkdocstrings.github.io/python/
    "mkdocstrings[python] >= 0.30, < 1",
    # We use `mkdocs-jupyter` to render and execute Jupyter notebooks as documentation pages.
    # Docs: https://github.com/danielfrg/mkdocs-jupyter
    "mkdocs-jupyter >= 0.25, < 1",
    # We use `ipykernel` so `mkdocs-jupyter` can execute notebook cells during the build.
    # Docs: https://ipykernel.readthedocs.io/en/stable/
    "ipykernel >= 6, < 7",
    # We use `mike` to deploy versioned documentation to GitHub Pages, with a version
    # selector rendered in the site header by Material for MkDocs.
    # Docs: https://github.com/jimporter/mike
    "mike >= 2.1, < 3",
]

# Configure pytest.
# Docs: https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
[tool.pytest]
addopts = ["--doctest-modules"]  # run doctests defined in _all_ modules (not only `test_*` modules)

# Configure mypy.
# Docs: https://mypy.readthedocs.io/en/stable/config_file.html#the-mypy-configuration-file
[tool.mypy]
packages = ["nmdc_client"]  # check the `nmdc_client` package
exclude = "^nmdc_client/test/"  # ignore paths beginning with `nmdc_client/test/`
